Prima e seconda row mobile

--- a/index.html
+++ b/index.html
@@ -3,20 +3,21 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/12-bool">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/12-bool.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Boolean aCademy responsive</title>
   </head>
   <body>
     <div id="lezioni" class="container">
-      <div class="row container">
+      <div class="row container ">
         <h1>Lezioni dove vuoi tu</h1>
-        <div class="left">
+        <div class="left col-lg-6 col-md-6 col-xs-12 ">
           <img src="img/icon/maps.png" alt="">
           <h3>A casa tua</h3>
-          Scegli il tuo maestro preferito e prenota la prima lezione a casa tua, a casa del maestro o nel suo studio
-        </div>
-        <div class="right">
+          <p>Scegli il tuo maestro preferito e prenota la prima lezione a casa tua, a casa del maestro o nel suo studio</p>
+          </div>
+        <div class="right col-lg-6 col-md-6 col-xs-12">
           <img src="img/icon/screen.png" alt="">
           <h3>Online</h3>
           Impara senza muoverti da casa! Scegli da una vastissima lista di maestri abilitati all'insegnamento online, senza doverti preoccupare di distanze e spostamenti
@@ -24,26 +25,35 @@
       </div>
     </div>
 
-    <div id="steps" class="container grey">
-      <div class="row">
+    <div id="steps" class="container" >
+      <div class="row container">
         <h1>Come Funziona</h1>
-        <div class="left">
-          <img src="img/search.svg" alt="">
-          <h3>Cerca</h3>
-          Guarda i profili dei migliori maestri della tua zona. Leggi la loro biografia e le recensioni lasciate dai loro studenti
+        <div class="col-lg-4 col-md-4 col-xs-12">
+          <div class="left">
+            <img src="img/search.svg" alt="">
+            <h3>Cerca</h3>
+            <p>Guarda i profili dei migliori maestri della tua zona. Leggi la loro biografia e le recensioni lasciate dai loro studenti</p>
+          </div>
         </div>
-        <div class="central">
-          <img src="img/letter.svg" alt="">
-          <h3>Contatta</h3>
-          Scrivi gratuitamente e senza impegno ai maestri che ti interessano e fai tutte le domande che vuoi!
+        <div class="col-lg-4 col-md-4 col-xs-12">
+          <div class="central  ">
+            <img src="img/letter.svg" alt="">
+            <h3>Contatta</h3>
+            <p>Scrivi gratuitamente e senza impegno ai maestri che ti interessano e fai tutte le domande che vuoi!</p>
+
+          </div>
         </div>
-        <div class="right">
-          <img src="img/male.svg" alt="">
-          <h3>Inizia a Suonare</h3>
-          Acquista un pacchetto di lezioni! Vuoi cambiare maestro? Le lezioni acquistate valgono con tutti i più di 1400 maestri Cademi!
+        <div class="col-lg-4 col-md-4 col-xs-12">
+          <div class="right">
+            <img src="img/male.svg" alt="">
+            <h3>Inizia a Suonare</h3>
+            <p>Acquista un pacchetto di lezioni! Vuoi cambiare maestro? Le lezioni acquistate valgono con tutti i più di 1400 maestri Cademi!</p>
+          </div>
         </div>
       </div>
     </div>
+
+
 
     <div id="why" class="container grey">
       <div class="row">
