--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <div class="right col-lg-6 col-md-6 col-xs-12">
           <img src="img/icon/screen.png" alt="">
           <h3>Online</h3>
-          Impara senza muoverti da casa! Scegli da una vastissima lista di maestri abilitati all'insegnamento online, senza doverti preoccupare di distanze e spostamenti
-        </div>
+          <p>Impara senza muoverti da casa! Scegli da una vastissima lista di maestri abilitati all'insegnamento online, senza doverti preoccupare di distanze e spostamenti</p>
+          </div>
       </div>
     </div>
 
@@ -52,28 +52,25 @@
         </div>
       </div>
     </div>
-
-
-
-    <div id="why" class="container grey">
-      <div class="row">
+    <div id="why" class="container">
+      <div class="row container">
         <h1>Perchè Cademi</h1>
         <div class="first">
           <img src="img/icon/profile.png" alt="">
           <h3>La più grande scuola d'Italia</h3>
-          Su Cademi trovi centinaia di Maestri qualificati e competenti in tutta Italia. Scegli quello più adatto a te e contattali senza impegno
+          <p>Su Cademi trovi centinaia di Maestri qualificati e competenti in tutta Italia. Scegli quello più adatto a te e contattali senza impegno</p>
           <hr>
         </div>
         <div class="second">
           <img src="img/icon/secure.png" alt="">
           <h3>Soddisfazione Garantita</h3>
-          Se non sei soddisfatto del tuo maestro, puoi cambiarlo senza costi aggiuntivi. Le lezioni acquistate su Cademi possono essere utilizzate con tutti i nostri maestri e il nostro team è sempre disponibile per darti un consiglio!
+          <p>Se non sei soddisfatto del tuo maestro, puoi cambiarlo senza costi aggiuntivi. Le lezioni acquistate su Cademi possono essere utilizzate con tutti i nostri maestri e il nostro team è sempre disponibile per darti un consiglio!</p>
           <hr>
         </div>
         <div class="third">
           <img src="img/icon/flex.png" alt="">
           <h3>Flessibile e Conveniente</h3>
-          Cademi non ha alcun costo d’iscrizione a differenza delle scuole di musica tradizionali. Inoltre, sei tu a scegliere dove fare lezione e gli orari delle tue lezioni.
+          <p>Cademi non ha alcun costo d’iscrizione a differenza delle scuole di musica tradizionali. Inoltre, sei tu a scegliere dove fare lezione e gli orari delle tue lezioni.</p>
         </div>
       </div>
     </div>
