--- a/index.html
+++ b/index.html
@@ -55,22 +55,28 @@
     <div id="why" class="container">
       <div class="row container">
         <h1>Perchè Cademi</h1>
-        <div class="first">
-          <img src="img/icon/profile.png" alt="">
-          <h3>La più grande scuola d'Italia</h3>
-          <p>Su Cademi trovi centinaia di Maestri qualificati e competenti in tutta Italia. Scegli quello più adatto a te e contattali senza impegno</p>
-          <hr>
+        <div class="col-lg-4">
+          <div class="first">
+            <img src="img/icon/profile.png" alt="">
+            <h3>La più grande scuola d'Italia</h3>
+            <p>Su Cademi trovi centinaia di Maestri qualificati e competenti in tutta Italia. Scegli quello più adatto a te e contattali senza impegno</p>
+            <hr>
+          </div>
         </div>
-        <div class="second">
-          <img src="img/icon/secure.png" alt="">
-          <h3>Soddisfazione Garantita</h3>
-          <p>Se non sei soddisfatto del tuo maestro, puoi cambiarlo senza costi aggiuntivi. Le lezioni acquistate su Cademi possono essere utilizzate con tutti i nostri maestri e il nostro team è sempre disponibile per darti un consiglio!</p>
-          <hr>
+        <div class="col-lg-4">
+          <div class="second">
+            <img src="img/icon/secure.png" alt="">
+            <h3>Soddisfazione Garantita</h3>
+            <p>Se non sei soddisfatto del tuo maestro, puoi cambiarlo senza costi aggiuntivi. Le lezioni acquistate su Cademi possono essere utilizzate con tutti i nostri maestri e il nostro team è sempre disponibile per darti un consiglio!</p>
+            <hr>
+          </div>
         </div>
-        <div class="third">
-          <img src="img/icon/flex.png" alt="">
-          <h3>Flessibile e Conveniente</h3>
-          <p>Cademi non ha alcun costo d’iscrizione a differenza delle scuole di musica tradizionali. Inoltre, sei tu a scegliere dove fare lezione e gli orari delle tue lezioni.</p>
+        <div class="col-lg-4">
+          <div class="third">
+            <img src="img/icon/flex.png" alt="">
+            <h3>Flessibile e Conveniente</h3>
+            <p>Cademi non ha alcun costo d’iscrizione a differenza delle scuole di musica tradizionali. Inoltre, sei tu a scegliere dove fare lezione e gli orari delle tue lezioni.</p>
+          </div>
         </div>
       </div>
     </div>
