--- a/index.html
+++ b/index.html
@@ -4,30 +4,31 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/12-bool.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Boolean aCademy responsive</title>
   </head>
   <body>
-    <div id="lezioni" class="container">
+    <div id="lezioni" class="color">
       <div class="row container ">
-        <h1>Lezioni dove vuoi tu</h1>
+        <h1 class="card">Lezioni dove vuoi tu</h1>
         <div class="left col-lg-6 col-md-6 col-xs-12 ">
           <img src="img/icon/maps.png" alt="">
           <h3>A casa tua</h3>
           <p>Scegli il tuo maestro preferito e prenota la prima lezione a casa tua, a casa del maestro o nel suo studio</p>
-          </div>
+        </div>
         <div class="right col-lg-6 col-md-6 col-xs-12">
           <img src="img/icon/screen.png" alt="">
           <h3>Online</h3>
           <p>Impara senza muoverti da casa! Scegli da una vastissima lista di maestri abilitati all'insegnamento online, senza doverti preoccupare di distanze e spostamenti</p>
-          </div>
+        </div>
       </div>
     </div>
-
     <div id="steps" class="container" >
       <div class="row container">
-        <h1>Come Funziona</h1>
+        <h1 class="card">Come Funziona</h1>
         <div class="col-lg-4 col-md-4 col-xs-12">
           <div class="left">
             <img src="img/search.svg" alt="">
@@ -36,11 +37,10 @@
           </div>
         </div>
         <div class="col-lg-4 col-md-4 col-xs-12">
-          <div class="central  ">
+          <div class="central">
             <img src="img/letter.svg" alt="">
             <h3>Contatta</h3>
             <p>Scrivi gratuitamente e senza impegno ai maestri che ti interessano e fai tutte le domande che vuoi!</p>
-
           </div>
         </div>
         <div class="col-lg-4 col-md-4 col-xs-12">
@@ -54,7 +54,7 @@
     </div>
     <div id="why" class="container">
       <div class="row container">
-        <h1>Perchè Cademi</h1>
+        <h1 class="card">Perchè Cademi</h1>
         <div class="col-lg-4">
           <div class="first">
             <img src="img/icon/profile.png" alt="">
